springdoc-sdk-plugin/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springdoc-demo
  labels:
    app: springdoc-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: api
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: docs
  selector:
    app: springdoc-demo
